infra/k8s/overlays/tiny-single-node/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-doc-web
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: null
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
